# MonitorConnection

./: .clippy.toml  .editorconfig  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
css/: main.css
src/: main.rs  state.rs
src/web_service/: mod.rs
src/web_service/routes/: mod.rs  register_tracker_venue.rs  statics.rs  venues.rs
src/web_service/views/: mod.rs  venue_monitor.rs  venue_request_modal.rs  venue_tracker_table.rs
src/web_service/views/components/: head.rs  mod.rs  venue_info_block.rs
